Fixing bug 132609. Make window.close() work even when called from an event handler that was added with addEventListener(). r=heikki@netscape.com, sr=jband@netscape.com